tests/data/bad/bad_inherit_changes.py
from __future__ import annotations

from pycs import CN
from tests.data.bad.bad_inherit import schema

cfg = CN(schema)
